...
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:text="@string/Schedule_An_Appointment"
            android:onClick="scheduleAppt"/>
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:onClick="logout"/>

...
